--- a/EVENT_MS/contact.html
+++ b/EVENT_MS/contact.html
@@ -125,9 +125,10 @@ https://templatemo.com/tm-575-leadership-event
                         Your browser does not support the video tag.
                     </video>
                 </div>
-            </section>
+            </section><br />
 
-            <section class="contact section-padding" id="contact-section">
+
+            <!--<section class="contact section-padding" id="contact-section">
                 <div class="container">
                     <div class="row">
 
@@ -160,7 +161,7 @@ https://templatemo.com/tm-575-leadership-event
 
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <section class="venue section-padding">
                 <div class="container">
