--- a/EVENT_MS/schedule.html
+++ b/EVENT_MS/schedule.html
@@ -69,6 +69,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link custom-btn btn d-none d-lg-block" href="login.aspx">logout</a>
+                        </li>
+
+
+                        <li class="nav-item">
+                            <a class="nav-link custom-btn btn d-none d-lg-block" href="admin.aspx">Admin</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link custom-btn btn d-none d-lg-block" href="BuyNow.aspx">Buy Tickets</a>
