--- a/EVENT_MS/speakers.html
+++ b/EVENT_MS/speakers.html
@@ -79,11 +79,12 @@ https://templatemo.com/tm-575-leadership-event
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html">Login</a>
+                            <a class="nav-link custom-btn btn d-none d-lg-block" href="login.aspx">logout</a>
                         </li>
 
+                       
                         <li class="nav-item">
-                            <a class="nav-link" href="register.html">Register</a>
+                            <a class="nav-link custom-btn btn d-none d-lg-block" href="admin.aspx">Admin</a>
                         </li>
 
                         <li class="nav-item">
